pickled sentiment analysis df

--- a/users/sentiment_analysis.ipynb
+++ b/users/sentiment_analysis.ipynb
@@ -1527,10 +1527,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/emilynaftalin/Data_Science/General Assembly/dsi/projects/Mass-Protests/users'"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "notes_mass.to_pickle('../data/03_mass_notes_sentiment_analysis.pkl')"
+   ]
   }
  ],
  "metadata": {
