most recent df (encoded protester_type_id and protest_size_category cols)

--- a/Hayden Modeling.ipynb
+++ b/Hayden Modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
     "np.random.seed(42)\n",
     "\n",
     "import tensorflow as tf \n",
-    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import StandardScaler, MultiLabelBinarizer\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn import metrics\n",
     "from sklearn.metrics import accuracy_score\n",
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -378,13 +378,41 @@
        "Name: partipants_number, Length: 15225, dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "mass['partipants_number']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 0],\n",
+       "       [1, 0, 1, 1, 0, 0, 0, 1, 0, 0, 1, 1, 1, 0, 0, 0, 1, 0],\n",
+       "       [1, 1, 0, 0, 1, 1, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0],\n",
+       "       [1, 0, 1, 1, 1, 0, 0, 1, 0, 1, 0, 0, 1, 1, 1, 1, 0, 1],\n",
+       "       [0, 0, 0, 0, 1, 1, 0, 1, 0, 0, 0, 1, 1, 0, 1, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 1, 0, 1, 1, 1, 0, 1, 0, 0, 0, 1, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0, 1, 1, 0, 0, 1, 1, 0]])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mlb = MultiLabelBinarizer()\n",
+    "mlb.fit_transform(mass[['arrests', 'accomodation',\n",
+    "       'beatings', 'crowddispersal', 'ignore', 'killings', 'shootings']])"
    ]
   },
   {
