need to recommit

--- a/users/sentiment_analysis.ipynb
+++ b/users/sentiment_analysis.ipynb
@@ -1547,12 +1547,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
-    "notes_mass.to_pickle('../data/03_mass_notes_sentiment_analysis.pkl')"
+    "notes_mass.to_pickle('../data/03_mass_notes_sentiment_analysis.pickle')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
