started logistic regression function

--- a/users/LogisticRegression_emily.ipynb
+++ b/users/LogisticRegression_emily.ipynb
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -755,6 +755,7 @@
     "        lr.fit(X_train_sc, y_train)\n",
     "        \n",
     "        response_dict[response] = lr.predict_proba(X_test_sc)[0][1]\n",
+    "        print(response_dict)\n",
     "        \n",
     "    top_response = max(response_dict.items(), key=lambda k: k[1])\n",
     "    \n",
@@ -763,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +778,21 @@
       "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
       "Please also refer to the documentation for alternative solver options:\n",
       "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'arrests': 0.4016257727256075}\n",
+      "{'arrests': 0.4016257727256075, 'accomodation': 0.07206943121944955}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "/Users/emilynaftalin/opt/anaconda3/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
       "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
       "\n",
@@ -785,7 +800,20 @@
       "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
       "Please also refer to the documentation for alternative solver options:\n",
       "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'arrests': 0.4016257727256075, 'accomodation': 0.07206943121944955, 'beatings': 0.21386391025228904}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "/Users/emilynaftalin/opt/anaconda3/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
       "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
       "\n",
@@ -793,7 +821,21 @@
       "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
       "Please also refer to the documentation for alternative solver options:\n",
       "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'arrests': 0.4016257727256075, 'accomodation': 0.07206943121944955, 'beatings': 0.21386391025228904, 'crowddispersal': 0.3818345169499125}\n",
+      "{'arrests': 0.4016257727256075, 'accomodation': 0.07206943121944955, 'beatings': 0.21386391025228904, 'crowddispersal': 0.3818345169499125, 'ignore': 0.07664528924354543}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "/Users/emilynaftalin/opt/anaconda3/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
       "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
       "\n",
@@ -801,7 +843,21 @@
       "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
       "Please also refer to the documentation for alternative solver options:\n",
       "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'arrests': 0.4016257727256075, 'accomodation': 0.07206943121944955, 'beatings': 0.21386391025228904, 'crowddispersal': 0.3818345169499125, 'ignore': 0.07664528924354543, 'killings': 0.35658368862007894}\n",
+      "{'arrests': 0.4016257727256075, 'accomodation': 0.07206943121944955, 'beatings': 0.21386391025228904, 'crowddispersal': 0.3818345169499125, 'ignore': 0.07664528924354543, 'killings': 0.35658368862007894, 'shootings': 0.3092331274246054}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "/Users/emilynaftalin/opt/anaconda3/lib/python3.8/site-packages/sklearn/linear_model/_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
       "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
       "\n",
@@ -818,7 +874,7 @@
        "('arrests', 0.4016257727256075)"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -832,7 +888,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mass['is_arrests'] = []"
+   ]
   }
  ],
  "metadata": {
