Updating with a few changes

--- a/users/data_cleaning_heather.ipynb
+++ b/users/data_cleaning_heather.ipynb
@@ -3423,7 +3423,7 @@
     "\n",
     "for key_reg, value_ctry in country_dict.items():\n",
     "    for ctry, reg in ctry_region:\n",
-    "        if value_ctry == ctry:\n",
+    "        if value_ctry in ctry:\n",
     "            subregion.append(key_reg)\n",
     "        else:\n",
     "            subregion.append(reg)"
