--- a/users/data_cleaning_paul.ipynb
+++ b/users/data_cleaning_paul.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,185 +10,51 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt \n",
     "import seaborn as sns\n",
-    "import re"
+    "import re\n",
+    "import pickle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>country</th>\n",
-       "      <th>ccode</th>\n",
-       "      <th>year</th>\n",
-       "      <th>region</th>\n",
-       "      <th>protestnumber</th>\n",
-       "      <th>startday</th>\n",
-       "      <th>startmonth</th>\n",
-       "      <th>startyear</th>\n",
-       "      <th>endday</th>\n",
-       "      <th>...</th>\n",
-       "      <th>sources</th>\n",
-       "      <th>notes</th>\n",
-       "      <th>protester_id_type</th>\n",
-       "      <th>partipants_number</th>\n",
-       "      <th>protest_size_category</th>\n",
-       "      <th>PopMale</th>\n",
-       "      <th>PopFemale</th>\n",
-       "      <th>PopTotal</th>\n",
-       "      <th>PopDensity</th>\n",
-       "      <th>prosperity_2020</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>201990001</td>\n",
-       "      <td>Canada</td>\n",
-       "      <td>20</td>\n",
-       "      <td>1990</td>\n",
-       "      <td>North America</td>\n",
-       "      <td>1</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1990.0</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1. great canadian train journeys into history;...</td>\n",
-       "      <td>canada s railway passenger system was finally ...</td>\n",
-       "      <td>workers_unions</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>1,000-4,999</td>\n",
-       "      <td>13656.649</td>\n",
-       "      <td>13884.674</td>\n",
-       "      <td>27541.323</td>\n",
-       "      <td>3.029</td>\n",
-       "      <td>79.819703</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>201990002</td>\n",
-       "      <td>Canada</td>\n",
-       "      <td>20</td>\n",
-       "      <td>1990</td>\n",
-       "      <td>North America</td>\n",
-       "      <td>2</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>1990.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1. autonomy s cry revived in quebec the new yo...</td>\n",
-       "      <td>protestors were only identified as young peopl...</td>\n",
-       "      <td>students_youth</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>1,000-4,999</td>\n",
-       "      <td>13656.649</td>\n",
-       "      <td>13884.674</td>\n",
-       "      <td>27541.323</td>\n",
-       "      <td>3.029</td>\n",
-       "      <td>79.819703</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>201990003</td>\n",
-       "      <td>Canada</td>\n",
-       "      <td>20</td>\n",
-       "      <td>1990</td>\n",
-       "      <td>North America</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>1990.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1. quebec protest after queen calls for unity ...</td>\n",
-       "      <td>the queen, after calling on canadians to remai...</td>\n",
-       "      <td>political_group</td>\n",
-       "      <td>500</td>\n",
-       "      <td>100-999</td>\n",
-       "      <td>13656.649</td>\n",
-       "      <td>13884.674</td>\n",
-       "      <td>27541.323</td>\n",
-       "      <td>3.029</td>\n",
-       "      <td>79.819703</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3 rows × 36 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "          id country  ccode  year         region  protestnumber  startday  \\\n",
-       "0  201990001  Canada     20  1990  North America              1      15.0   \n",
-       "1  201990002  Canada     20  1990  North America              2      25.0   \n",
-       "2  201990003  Canada     20  1990  North America              3       1.0   \n",
-       "\n",
-       "   startmonth  startyear  endday  ...  \\\n",
-       "0         1.0     1990.0    15.0  ...   \n",
-       "1         6.0     1990.0    25.0  ...   \n",
-       "2         7.0     1990.0     1.0  ...   \n",
-       "\n",
-       "                                             sources  \\\n",
-       "0  1. great canadian train journeys into history;...   \n",
-       "1  1. autonomy s cry revived in quebec the new yo...   \n",
-       "2  1. quebec protest after queen calls for unity ...   \n",
-       "\n",
-       "                                               notes  protester_id_type  \\\n",
-       "0  canada s railway passenger system was finally ...     workers_unions   \n",
-       "1  protestors were only identified as young peopl...     students_youth   \n",
-       "2  the queen, after calling on canadians to remai...    political_group   \n",
-       "\n",
-       "  partipants_number protest_size_category    PopMale  PopFemale   PopTotal  \\\n",
-       "0              1000           1,000-4,999  13656.649  13884.674  27541.323   \n",
-       "1              1000           1,000-4,999  13656.649  13884.674  27541.323   \n",
-       "2               500               100-999  13656.649  13884.674  27541.323   \n",
-       "\n",
-       "  PopDensity prosperity_2020  \n",
-       "0      3.029       79.819703  \n",
-       "1      3.029       79.819703  \n",
-       "2      3.029       79.819703  \n",
-       "\n",
-       "[3 rows x 36 columns]"
+       "5"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "pickle.HIGHEST_PROTOCOL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# mass = pd.read_csv('../source/mmALL_073120_csv.csv')\n",
-    "mass = pd.read_pickle('../data/02b_added_prosperity.pickle')\n",
+    "#mass = pd.read_pickle('../data/02b_added_prosperity.pickle')\n",
+    "\n",
+    "mass = pd.read_pickle('../data/03_dummy_df.pickle')\n",
+    "\n",
+    "# infile = open('../data/03_dummy_df.pickle','r')\n",
+    "# mass = pickle.load(infile)\n",
+    "# infile.close()\n",
     "\n",
     "mass.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,29 +64,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['id', 'country', 'ccode', 'year', 'region', 'protestnumber', 'startday',\n",
-       "       'startmonth', 'startyear', 'endday', 'endmonth', 'endyear',\n",
-       "       'protesterviolence', 'location', 'protesteridentity',\n",
-       "       'protesterdemand1', 'protesterdemand2', 'protesterdemand3',\n",
-       "       'protesterdemand4', 'stateresponse1', 'stateresponse2',\n",
-       "       'stateresponse3', 'stateresponse4', 'stateresponse5', 'stateresponse6',\n",
-       "       'stateresponse7', 'sources', 'notes', 'protester_id_type',\n",
-       "       'partipants_number', 'protest_size_category', 'pop_male', 'pop_female',\n",
-       "       'pop_total', 'pop_density', 'prosperity_2020'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mass.columns"
    ]
