retrieving haydens dataframe

--- a/users/LogisticRegression_emily.ipynb
+++ b/users/LogisticRegression_emily.ipynb
@@ -1850,6 +1850,35 @@
    "source": [
     "mass['is_arrests'] = []"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mass.groupby('country').count()[mass['3_digit_code'].isnull()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mass[mass['country'].notna() & mass['country_alpha_3']].groupby('country')"
+   ]
   }
  ],
  "metadata": {
