created predictions only df in wrong branch

--- a/data/Untitled.ipynb
+++ b/data/Untitled.ipynb
@@ -2,11 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt \n",
+    "import seaborn as sns"
    ]
   },
   {
@@ -273,6 +276,274 @@
    ],
    "source": [
     "mass.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/emilynaftalin/Data_Science/General Assembly/dsi/projects/Mass-Protests/data'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = pd.read_csv('./04_predictions_only.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>arrests</th>\n",
+       "      <th>arrests_predicted</th>\n",
+       "      <th>arrests_probability</th>\n",
+       "      <th>accomodation</th>\n",
+       "      <th>accomodation_predicted</th>\n",
+       "      <th>accomodation_probability</th>\n",
+       "      <th>beatings</th>\n",
+       "      <th>beatings_predicted</th>\n",
+       "      <th>beatings_probability</th>\n",
+       "      <th>...</th>\n",
+       "      <th>crowddispersal_probability</th>\n",
+       "      <th>ignore</th>\n",
+       "      <th>ignore_predicted</th>\n",
+       "      <th>ignore_probability</th>\n",
+       "      <th>killings</th>\n",
+       "      <th>killings_predicted</th>\n",
+       "      <th>killings_probability</th>\n",
+       "      <th>killings.1</th>\n",
+       "      <th>killings_predicted.1</th>\n",
+       "      <th>killings_probability.1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>201990001</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.104568</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.174497</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000192</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.078412</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.755349</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.006260</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.006260</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>201990002</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.191000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.117303</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000307</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.104708</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.692979</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.007246</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.007246</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>201990003</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.205189</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.052175</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000267</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.096429</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.687309</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.008844</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.008844</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>201990004</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.533197</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.156799</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000359</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.379723</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.055110</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.103104</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.103104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>201990005</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.421843</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.085363</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000595</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.452339</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.138899</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.041307</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.041307</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          id  arrests  arrests_predicted  arrests_probability  accomodation  \\\n",
+       "0  201990001        0                  0             0.104568             0   \n",
+       "1  201990002        0                  0             0.191000             0   \n",
+       "2  201990003        0                  0             0.205189             0   \n",
+       "3  201990004        0                  1             0.533197             1   \n",
+       "4  201990005        1                  0             0.421843             1   \n",
+       "\n",
+       "   accomodation_predicted  accomodation_probability  beatings  \\\n",
+       "0                       0                  0.174497         0   \n",
+       "1                       0                  0.117303         0   \n",
+       "2                       0                  0.052175         0   \n",
+       "3                       0                  0.156799         0   \n",
+       "4                       0                  0.085363         0   \n",
+       "\n",
+       "   beatings_predicted  beatings_probability  ...  crowddispersal_probability  \\\n",
+       "0                   0              0.000192  ...                    0.078412   \n",
+       "1                   0              0.000307  ...                    0.104708   \n",
+       "2                   0              0.000267  ...                    0.096429   \n",
+       "3                   0              0.000359  ...                    0.379723   \n",
+       "4                   0              0.000595  ...                    0.452339   \n",
+       "\n",
+       "   ignore  ignore_predicted  ignore_probability  killings  killings_predicted  \\\n",
+       "0       1                 1            0.755349         0                   0   \n",
+       "1       1                 1            0.692979         0                   0   \n",
+       "2       1                 1            0.687309         0                   0   \n",
+       "3       0                 0            0.055110         0                   0   \n",
+       "4       0                 0            0.138899         0                   0   \n",
+       "\n",
+       "   killings_probability  killings.1  killings_predicted.1  \\\n",
+       "0              0.006260           0                     0   \n",
+       "1              0.007246           0                     0   \n",
+       "2              0.008844           0                     0   \n",
+       "3              0.103104           0                     0   \n",
+       "4              0.041307           0                     0   \n",
+       "\n",
+       "   killings_probability.1  \n",
+       "0                0.006260  \n",
+       "1                0.007246  \n",
+       "2                0.008844  \n",
+       "3                0.103104  \n",
+       "4                0.041307  \n",
+       "\n",
+       "[5 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions.plot(kind='barh')"
    ]
   },
   {
