--- a/data/Untitled.ipynb
+++ b/data/Untitled.ipynb
@@ -543,7 +543,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions.plot(kind='barh')"
+    "# predictions.plot(kind='barh')"
    ]
   },
   {
