newer version of log reg functions

--- a/data/emily_tests.ipynb
+++ b/data/emily_tests.ipynb
@@ -551,7 +551,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "logreg = LogisticRegression()\n",
+    "\n",
+    "params = {\n",
+    "    'C': [0.01, 0.1, 1, 10, 100],\n",
+    "    'penalty' : ['l1', 'l2'],\n",
+    "    'solver': ['lbfgs', 'saga']\n",
+    "}\n",
+    "\n",
+    "log_reg_grid = GridSearchCV(logreg, \n",
+    "                   params,\n",
+    "                   cv = 5,\n",
+    "                   verbose = 2,\n",
+    "                   n_jobs=2)"
+   ]
   }
  ],
  "metadata": {
