--- a/users/logistic_regression_clean.ipynb
+++ b/users/logistic_regression_clean.ipynb
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2228,36 +2228,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "arrests- F1_score for LogisticRegression(max_iter=1000) model, train set: 0.2027871215761653\n",
-      "arrests- F1_score for LogisticRegression(max_iter=1000) model, test set: 0.18148820326678766\n",
-      "arrests- Precision for LogisticRegression(max_iter=1000) model, train set: 0.5368956743002544\n",
-      "arrests- Precision for LogisticRegression(max_iter=1000) model, test set: 0.5434782608695652\n",
-      "arrests- Recall for LogisticRegression(max_iter=1000) model, train set: 0.125\n",
-      "arrests- Recall for LogisticRegression(max_iter=1000) model, teset set: 0.10893246187363835\n",
-      "LogisticRegression(max_iter=1000)\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'arrests'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-86-65021f75c790>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m                                                                                                                                 LogisticRegression_1)\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     \u001b[0mmodel_performance_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m \u001b[0;31m#     model_performance_dict['class_balance'].append(mass[classifier].value_counts(normalize=True))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0mmodel_performance_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'model'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'arrests'"
+      "arrests- F1_score for LogisticRegression(max_iter=1000) model, train set: 0.1408450704225352\n",
+      "arrests- F1_score for LogisticRegression(max_iter=1000) model, test set: 0.1310211946050096\n",
+      "arrests- Precision for LogisticRegression(max_iter=1000) model, train set: 0.5895196506550219\n",
+      "arrests- Precision for LogisticRegression(max_iter=1000) model, test set: 0.5666666666666667\n",
+      "arrests- Recall for LogisticRegression(max_iter=1000) model, train set: 0.07997630331753554\n",
+      "arrests- Recall for LogisticRegression(max_iter=1000) model, teset set: 0.07407407407407407\n",
+      "LogisticRegression(max_iter=1000)\n",
+      "accomodation- F1_score for LogisticRegression(max_iter=1000) model, train set: 0.03843074459567654\n",
+      "accomodation- F1_score for LogisticRegression(max_iter=1000) model, test set: 0.053571428571428575\n",
+      "accomodation- Precision for LogisticRegression(max_iter=1000) model, train set: 0.5454545454545454\n",
+      "accomodation- Precision for LogisticRegression(max_iter=1000) model, test set: 0.6\n",
+      "accomodation- Recall for LogisticRegression(max_iter=1000) model, train set: 0.01991701244813278\n",
+      "accomodation- Recall for LogisticRegression(max_iter=1000) model, teset set: 0.028037383177570093\n",
+      "LogisticRegression(max_iter=1000)\n",
+      "beatings- F1_score for LogisticRegression(max_iter=1000) model, train set: 0.11881188118811882\n",
+      "beatings- F1_score for LogisticRegression(max_iter=1000) model, test set: 0.14444444444444446\n",
+      "beatings- Precision for LogisticRegression(max_iter=1000) model, train set: 0.65625\n",
+      "beatings- Precision for LogisticRegression(max_iter=1000) model, test set: 0.65\n",
+      "beatings- Recall for LogisticRegression(max_iter=1000) model, train set: 0.06531881804043546\n",
+      "beatings- Recall for LogisticRegression(max_iter=1000) model, teset set: 0.08125\n",
+      "LogisticRegression(max_iter=1000)\n",
+      "crowddispersal- F1_score for LogisticRegression(max_iter=1000) model, train set: 0.657023000144655\n",
+      "crowddispersal- F1_score for LogisticRegression(max_iter=1000) model, test set: 0.6085946573751453\n",
+      "crowddispersal- Precision for LogisticRegression(max_iter=1000) model, train set: 0.7373376623376623\n",
+      "crowddispersal- Precision for LogisticRegression(max_iter=1000) model, test set: 0.6649746192893401\n",
+      "crowddispersal- Recall for LogisticRegression(max_iter=1000) model, train set: 0.5924863031567963\n",
+      "crowddispersal- Recall for LogisticRegression(max_iter=1000) model, teset set: 0.5610278372591007\n",
+      "LogisticRegression(max_iter=1000)\n",
+      "ignore- F1_score for LogisticRegression(max_iter=1000) model, train set: 0.794378288562725\n",
+      "ignore- F1_score for LogisticRegression(max_iter=1000) model, test set: 0.7804335742078933\n",
+      "ignore- Precision for LogisticRegression(max_iter=1000) model, train set: 0.7336317135549872\n",
+      "ignore- Precision for LogisticRegression(max_iter=1000) model, test set: 0.7225939269171384\n",
+      "ignore- Recall for LogisticRegression(max_iter=1000) model, train set: 0.8660929951690821\n",
+      "ignore- Recall for LogisticRegression(max_iter=1000) model, teset set: 0.8483383685800604\n",
+      "LogisticRegression(max_iter=1000)\n",
+      "killings- F1_score for LogisticRegression(max_iter=1000) model, train set: 0.17120622568093383\n",
+      "killings- F1_score for LogisticRegression(max_iter=1000) model, test set: 0.12435233160621761\n",
+      "killings- Precision for LogisticRegression(max_iter=1000) model, train set: 0.5789473684210527\n",
+      "killings- Precision for LogisticRegression(max_iter=1000) model, test set: 0.48\n",
+      "killings- Recall for LogisticRegression(max_iter=1000) model, train set: 0.1004566210045662\n",
+      "killings- Recall for LogisticRegression(max_iter=1000) model, teset set: 0.07142857142857142\n",
+      "LogisticRegression(max_iter=1000)\n",
+      "shootings- F1_score for LogisticRegression(max_iter=1000) model, train set: 0.21176470588235294\n",
+      "shootings- F1_score for LogisticRegression(max_iter=1000) model, test set: 0.1722488038277512\n",
+      "shootings- Precision for LogisticRegression(max_iter=1000) model, train set: 0.5689655172413793\n",
+      "shootings- Precision for LogisticRegression(max_iter=1000) model, test set: 0.4864864864864865\n",
+      "shootings- Recall for LogisticRegression(max_iter=1000) model, train set: 0.13009198423127463\n",
+      "shootings- Recall for LogisticRegression(max_iter=1000) model, teset set: 0.10465116279069768\n",
+      "LogisticRegression(max_iter=1000)\n",
+      "{'target': ['arrests', 'accomodation', 'beatings', 'crowddispersal', 'ignore', 'killings', 'shootings'], 'f1_score_train': [0.1408450704225352, 0.03843074459567654, 0.11881188118811882, 0.657023000144655, 0.794378288562725, 0.17120622568093383, 0.21176470588235294], 'f1_score_test': [0.1310211946050096, 0.053571428571428575, 0.14444444444444446, 0.6085946573751453, 0.7804335742078933, 0.12435233160621761, 0.1722488038277512], 'precision_train': [0.5895196506550219, 0.5454545454545454, 0.65625, 0.7373376623376623, 0.7336317135549872, 0.5789473684210527, 0.5689655172413793], 'precision_test': [0.5666666666666667, 0.6, 0.65, 0.6649746192893401, 0.7225939269171384, 0.48, 0.4864864864864865], 'recall_train': [0.07997630331753554, 0.01991701244813278, 0.06531881804043546, 0.5924863031567963, 0.8660929951690821, 0.1004566210045662, 0.13009198423127463], 'recall_test': [0.07407407407407407, 0.028037383177570093, 0.08125, 0.5610278372591007, 0.8483383685800604, 0.07142857142857142, 0.10465116279069768]}\n"
      ]
     }
    ],
    "source": [
-    "model_performance_dict = {}\n",
+    "model_performance_dict = {\n",
+    "    'target':[],\n",
+    "#     'model':[],\n",
+    "    'f1_score_train':[],\n",
+    "    'f1_score_test':[],\n",
+    "    'precision_train':[],\n",
+    "    'precision_test':[],\n",
+    "    'recall_train':[],\n",
+    "    'recall_test':[] \n",
+    "}\n",
     "\n",
     "# ['arrests','accomodation','beatings','crowddispersal','ignore','killings','shootings']\n",
     "# ['arrests_BC', 'accomodation_BC', 'beatings_BC', 'crowddispersal_BC', 'ignore_BC', 'killings_BC', 'shootings_BC']\n",
@@ -2269,20 +2310,162 @@
     "    predicted_column, probability_column, f1_score_train, f1_score_test, precision_train, precision_test, recall_train, recall_test = state_response_predictor(\n",
     "                                                                                                                                mass, \n",
     "                                                                                                                                features_1, \n",
-    "                                                                                                                                classifier, \n",
+    "                                                                                                                                target, \n",
     "                                                                                                                                LogisticRegression_1)\n",
     "    \n",
-    "    model_performance_dict[target].append(target)\n",
+    "    model_performance_dict['target'].append(target)\n",
     "#     model_performance_dict['class_balance'].append(mass[classifier].value_counts(normalize=True))\n",
-    "    model_performance_dict['model'].append(model)\n",
+    "#     model_performance_dict['model'].append(model)\n",
     "    model_performance_dict['f1_score_train'].append(f1_score_train)\n",
     "    model_performance_dict['f1_score_test'].append(f1_score_test)\n",
     "    model_performance_dict['precision_train'].append(precision_train)\n",
     "    model_performance_dict['precision_test'].append(precision_test)\n",
     "    model_performance_dict['recall_train'].append(recall_train)\n",
-    "    model_performance_dict['recall_test']\n",
+    "    model_performance_dict['recall_test'].append(recall_test)\n",
     "    \n",
-    "model_performance_df = pd.DataFrame(model_performance_dict)"
+    "print(model_performance_dict)\n",
+    "    \n",
+    "# model_performance_df = pd.DataFrame(model_performance_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>target</th>\n",
+       "      <th>f1_score_train</th>\n",
+       "      <th>f1_score_test</th>\n",
+       "      <th>precision_train</th>\n",
+       "      <th>precision_test</th>\n",
+       "      <th>recall_train</th>\n",
+       "      <th>recall_test</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>arrests</td>\n",
+       "      <td>0.140845</td>\n",
+       "      <td>0.131021</td>\n",
+       "      <td>0.589520</td>\n",
+       "      <td>0.566667</td>\n",
+       "      <td>0.079976</td>\n",
+       "      <td>0.074074</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>accomodation</td>\n",
+       "      <td>0.038431</td>\n",
+       "      <td>0.053571</td>\n",
+       "      <td>0.545455</td>\n",
+       "      <td>0.600000</td>\n",
+       "      <td>0.019917</td>\n",
+       "      <td>0.028037</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>beatings</td>\n",
+       "      <td>0.118812</td>\n",
+       "      <td>0.144444</td>\n",
+       "      <td>0.656250</td>\n",
+       "      <td>0.650000</td>\n",
+       "      <td>0.065319</td>\n",
+       "      <td>0.081250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>crowddispersal</td>\n",
+       "      <td>0.657023</td>\n",
+       "      <td>0.608595</td>\n",
+       "      <td>0.737338</td>\n",
+       "      <td>0.664975</td>\n",
+       "      <td>0.592486</td>\n",
+       "      <td>0.561028</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ignore</td>\n",
+       "      <td>0.794378</td>\n",
+       "      <td>0.780434</td>\n",
+       "      <td>0.733632</td>\n",
+       "      <td>0.722594</td>\n",
+       "      <td>0.866093</td>\n",
+       "      <td>0.848338</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>killings</td>\n",
+       "      <td>0.171206</td>\n",
+       "      <td>0.124352</td>\n",
+       "      <td>0.578947</td>\n",
+       "      <td>0.480000</td>\n",
+       "      <td>0.100457</td>\n",
+       "      <td>0.071429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>shootings</td>\n",
+       "      <td>0.211765</td>\n",
+       "      <td>0.172249</td>\n",
+       "      <td>0.568966</td>\n",
+       "      <td>0.486486</td>\n",
+       "      <td>0.130092</td>\n",
+       "      <td>0.104651</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           target  f1_score_train  f1_score_test  precision_train  \\\n",
+       "0         arrests        0.140845       0.131021         0.589520   \n",
+       "1    accomodation        0.038431       0.053571         0.545455   \n",
+       "2        beatings        0.118812       0.144444         0.656250   \n",
+       "3  crowddispersal        0.657023       0.608595         0.737338   \n",
+       "4          ignore        0.794378       0.780434         0.733632   \n",
+       "5        killings        0.171206       0.124352         0.578947   \n",
+       "6       shootings        0.211765       0.172249         0.568966   \n",
+       "\n",
+       "   precision_test  recall_train  recall_test  \n",
+       "0        0.566667      0.079976     0.074074  \n",
+       "1        0.600000      0.019917     0.028037  \n",
+       "2        0.650000      0.065319     0.081250  \n",
+       "3        0.664975      0.592486     0.561028  \n",
+       "4        0.722594      0.866093     0.848338  \n",
+       "5        0.480000      0.100457     0.071429  \n",
+       "6        0.486486      0.130092     0.104651  "
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_performance_df = pd.DataFrame(model_performance_dict)\n",
+    "model_performance_df"
    ]
   },
   {
@@ -2358,11 +2541,12 @@
     "                                                                                                                                classifier, \n",
     "                                                                                                                                LogisticRegression_1)\n",
     "     \n",
-    "    model_performance_dict['Classifier'] = classifier\n",
+    "    model_performance_dict['Classifier'].append(classifier)\n",
     "#     model_performance_dict['class_balance'] = mass[classifier].value_counts(normalize=True))\n",
     "    model_performance_dict['model'] = model\n",
-    "    model_performance_dict['f1_score_train'] = f1_score_train\n",
-    "    model_performance_dict['f1_score_test'] = f1_score_test\n",
+    "    model_performance_dict['f1_score_train'].append(f1_score_train)\n",
+    "    model_performance_dict['f1_score_test'].append(f1_score_test)\n",
+    "    \n",
     "    model_performance_dict['precision_train'] = precision_train\n",
     "    model_performance_dict['precision_test'] = precision_test\n",
     "    model_performance_dict['recall_train'] = recall_train\n",
@@ -2549,6 +2733,34 @@
    ],
    "source": [
     "mass['crowddispersal'].value_counts(normalize=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# logreg_cvec_pipe = Pipeline([\n",
+    "#         ('cvec', CountVectorizer(stop_words=all_stop_words)),\n",
+    "#         ('logreg', LogisticRegression())\n",
+    "#     ])\n",
+    "\n",
+    "# logreg = LogisticRegression()\n",
+    "\n",
+    "# params = {\n",
+    "#     'C': [0.01, 0.1, 1, 10, 100],\n",
+    "#     'penalty' : ['l1', 'l2'],\n",
+    "#     'solver': ['lbfgs', 'saga']\n",
+    "# }\n",
+    "\n",
+    "# log_reg_grid = GridSearchCV(logreg, \n",
+    "#                    params,\n",
+    "#                    cv = 5,\n",
+    "#                    verbose = 2,\n",
+    "#                    n_jobs=2)\n",
+    "\n",
+    "# logreg_cvec_grid.fit(X_train, y_train)"
    ]
   },
   {
