--- a/users/MassProtest_Visualizations.ipynb
+++ b/users/MassProtest_Visualizations.ipynb
@@ -82,6 +82,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 15150 entries, 0 to 15178\n",
+      "Columns: 235 entries, id to country_alpha3\n",
+      "dtypes: float64(10), int64(212), object(13)\n",
+      "memory usage: 27.9+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "mass.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "metadata": {
     "scrolled": true
