mass_no_country df to csv and pickle

--- a/users/consolidated_mass_logistic_regression.ipynb
+++ b/users/consolidated_mass_logistic_regression.ipynb
@@ -2144,7 +2144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
@@ -2153,7 +2153,7 @@
        "'/Users/emilynaftalin/Data_Science/General Assembly/dsi/projects/Mass-Protests/users'"
       ]
      },
-     "execution_count": 264,
+     "execution_count": 265,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2164,11 +2164,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mass_no_country.to_csv()"
+    "mass_no_country.to_csv('../data/03_mass_no_country.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 268,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mass_no_country.to_pickle('../data/mass_no_country.pickle')"
    ]
   }
  ],
