Improved flow of predictions notebook

--- a/users/multi_label_modeling_paul.ipynb
+++ b/users/multi_label_modeling_paul.ipynb
@@ -568,8 +568,8 @@
    "outputs": [],
    "source": [
     "# save the model to disk\n",
-    "model_file = '../models/01_multi_label_forest.pickle'\n",
-    "pickle.dump(tuned_model, open(model_file, 'wb'))"
+    "model_file_name = '../models/01_multi_label_forest.pickle'\n",
+    "pickle.dump(  tuned_model     , open(   model_file_name, 'wb'))"
    ]
   },
   {
