--- a/users/multi_label_predictions.ipynb
+++ b/users/multi_label_predictions.ipynb
@@ -1,41 +1,30 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 296,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt \n",
-    "import seaborn as sns\n",
-    "import pickle\n",
+    "### Mass Protest\n",
+    "#### Import built models to predict responses with five United States protests\n",
     "\n",
-    "\n"
+    "Models in this notebook all use a Sklearn MultiOutputClassifier.\n",
+    "\n",
+    "One model uses a RandomForestClassifier, and one uses LogisticRegression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#mass = pd.read_csv('../data/03_mass_no_country.csv')"
+    "import pandas as pd\n",
+    "import pickle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X = pd.read_csv('../data/x_sample.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [
     {
@@ -230,12 +219,13 @@
        "[4 rows x 40 columns]"
       ]
      },
-     "execution_count": 299,
+     "execution_count": 315,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "X = pd.read_csv('../data/x_sample.csv')\n",
     "X.head()"
    ]
   },
@@ -248,20 +238,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load the model from disk\n",
     "model_file = '../models/01_multi_label_forest.pickle'\n",
-    "multi_label_forest_model = pickle.load(open(model_file, 'rb'))\n",
-    "\n",
-    "\n"
+    "multi_label_forest_model = pickle.load(open(model_file, 'rb'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +426,7 @@
        "[1 rows x 40 columns]"
       ]
      },
-     "execution_count": 303,
+     "execution_count": 319,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +650,7 @@
        "[2 rows x 40 columns]"
       ]
      },
-     "execution_count": 304,
+     "execution_count": 320,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +904,7 @@
        "[3 rows x 40 columns]"
       ]
      },
-     "execution_count": 305,
+     "execution_count": 321,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -987,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [
     {
@@ -1206,7 +1194,7 @@
        "[4 rows x 40 columns]"
       ]
      },
-     "execution_count": 306,
+     "execution_count": 322,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1272,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [
     {
@@ -1526,7 +1514,7 @@
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 307,
+     "execution_count": 323,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1592,7 +1580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [
     {
@@ -1696,7 +1684,7 @@
        "2021 D.C. Riot                     0         0          0  "
       ]
      },
-     "execution_count": 308,
+     "execution_count": 324,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1727,7 +1715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1739,7 +1727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [
     {
@@ -1843,7 +1831,7 @@
        "2021 D.C. Riot                     0         0          0  "
       ]
      },
-     "execution_count": 313,
+     "execution_count": 326,
      "metadata": {},
      "output_type": "execute_result"
     }
