updated notebook with results section for slides

--- a/users/log_reg_for_metrics_en.ipynb
+++ b/users/log_reg_for_metrics_en.ipynb
@@ -2137,7 +2137,9 @@
     "# zipping targets and models together to pass to for-loop \n",
     "target_model_list = list(zip(targets, models))\n",
     "    \n",
-    "# for-loop to run function that generates all the metrics and visuals and then appends them to the dictionary    \n",
+    "# for-loop to run function that generates all the metrics and visuals \n",
+    "#and then appends them to the dictionary    \n",
+    "\n",
     "for target, model in target_model_list:\n",
     "        \n",
     "    X_train, roc_auc, f1_score_train, f1_score_test, \\\n",
